--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the tuple() function to display the latitude and longitude combinations.\n",
     "for coordinate in coordinates:\n",
@@ -50,25 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[46.88450336717591,\n",
-       " 62.92769956026971,\n",
-       " -62.67915641936572,\n",
-       " 26.273448254577698,\n",
-       " 84.20935063607425,\n",
-       " -85.03480494825074,\n",
-       " 76.94428405300432,\n",
-       " 13.047476644923659,\n",
-       " 17.207586793424166,\n",
-       " -31.341229237880327]"
+       "[-47.26325289588474,\n",
+       " -23.88055287689378,\n",
+       " -36.10109881652472,\n",
+       " -22.405618272121053,\n",
+       " -73.50307877709926,\n",
+       " -45.79181498242163,\n",
+       " -35.90334202593156,\n",
+       " -81.91574533066711,\n",
+       " -49.701379436496794,\n",
+       " -27.03729140645162]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=98a9565de397c8ae438f370563562b94\n"
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=9c46a9f1a17d6c95a3825735e927c1cf\n"
      ]
     }
    ],
@@ -118,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=98a9565de397c8ae438f370563562b94&q=Boston\n"
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=9c46a9f1a17d6c95a3825735e927c1cf&q=Boston\n"
      ]
     }
    ],
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +158,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +180,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +203,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.06,\"lat\":42.36},\"weather\":[{\"id\":501,\"main\":\"Rain\",\"description\":\"moderate rain\",\"icon\":\"10n\"},{\"id\":701,\"main\":\"Mist\",\"description\":\"mist\",\"icon\":\"50n\"}],\"base\":\"stations\",\"main\":{\"temp\":35.13,\"feels_like\":27.95,\"temp_min\":33.01,\"temp_max\":37,\"pressure\":1013,\"humidity\":80},\"visibility\":6437,\"wind\":{\"speed\":5.82,\"deg\":90},\"rain\":{\"1h\":2.39},\"clouds\":{\"all\":90},\"dt\":1587194303,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1587203852,\"sunset\":1587252538},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.06,\"lat\":42.36},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":85.33,\"feels_like\":82.9,\"temp_min\":82,\"temp_max\":88,\"pressure\":1016,\"humidity\":43},\"visibility\":10000,\"wind\":{\"speed\":10.29,\"deg\":280},\"clouds\":{\"all\":82},\"dt\":1597277280,\"sys\":{\"type\":1,\"id\":4967,\"country\":\"US\",\"sunrise\":1597225730,\"sunset\":1597276184},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,42 +238,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.06, 'lat': 42.36},\n",
-       " 'weather': [{'id': 501,\n",
-       "   'main': 'Rain',\n",
-       "   'description': 'moderate rain',\n",
-       "   'icon': '10n'},\n",
-       "  {'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50n'}],\n",
+       " 'weather': [{'id': 803,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 35.13,\n",
-       "  'feels_like': 27.95,\n",
-       "  'temp_min': 33.01,\n",
-       "  'temp_max': 37,\n",
-       "  'pressure': 1013,\n",
-       "  'humidity': 80},\n",
-       " 'visibility': 6437,\n",
-       " 'wind': {'speed': 5.82, 'deg': 90},\n",
-       " 'rain': {'1h': 2.39},\n",
-       " 'clouds': {'all': 90},\n",
-       " 'dt': 1587194303,\n",
+       " 'main': {'temp': 85.33,\n",
+       "  'feels_like': 82.9,\n",
+       "  'temp_min': 82,\n",
+       "  'temp_max': 88,\n",
+       "  'pressure': 1016,\n",
+       "  'humidity': 43},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 10.29, 'deg': 280},\n",
+       " 'clouds': {'all': 82},\n",
+       " 'dt': 1597277280,\n",
        " 'sys': {'type': 1,\n",
-       "  'id': 3486,\n",
+       "  'id': 4967,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1587203852,\n",
-       "  'sunset': 1587252538},\n",
+       "  'sunrise': 1597225730,\n",
+       "  'sunset': 1597276184},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -319,40 +329,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.06, 'lat': 42.36},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 803,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02n'}],\n",
+       "   'description': 'broken clouds',\n",
+       "   'icon': '04n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 36.28,\n",
-       "  'feels_like': 30.79,\n",
-       "  'temp_min': 33.01,\n",
-       "  'temp_max': 39.2,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 80},\n",
-       " 'visibility': 16093,\n",
-       " 'wind': {'speed': 3.06, 'deg': 274},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1587267511,\n",
+       " 'main': {'temp': 85.33,\n",
+       "  'feels_like': 82.9,\n",
+       "  'temp_min': 82,\n",
+       "  'temp_max': 88,\n",
+       "  'pressure': 1016,\n",
+       "  'humidity': 43},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 10.29, 'deg': 280},\n",
+       " 'clouds': {'all': 82},\n",
+       " 'dt': 1597277280,\n",
        " 'sys': {'type': 1,\n",
-       "  'id': 3486,\n",
+       "  'id': 4967,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1587203852,\n",
-       "  'sunset': 1587252538},\n",
+       "  'sunrise': 1597225730,\n",
+       "  'sunset': 1597276184},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,20 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'type': 1,\n",
-       " 'id': 3486,\n",
+       " 'id': 4967,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1587203852,\n",
-       " 'sunset': 1587252538}"
+       " 'sunrise': 1597225730,\n",
+       " 'sunset': 1597276184}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +419,7 @@
        "'US'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,16 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1587267511"
+       "1597277280"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,14 +450,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.36 -71.06 39.2 80 20 3.06\n"
+      "42.36 -71.06 88 43 82 10.29\n"
      ]
     }
    ],
@@ -463,16 +473,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2020-04-19 03:38:31'"
+       "'2020-08-13 00:08:00'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -542,16 +552,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1587343862.509038"
+       "1597277564.034951"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'04/19/20'"
+       "'08/12/20'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
